--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,22 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     repositories {
-        google()
+        if(!getGradle().getStartParameter().getTaskRequests().toString().contains("fcm"))
+        {
+            google()
+        }
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        if(!getGradle().getStartParameter().getTaskRequests().toString().contains("fcm"))
+        {
+            classpath 'com.google.gms:google-services:4.2.0'
+        }
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +26,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        if(!getGradle().getStartParameter().getTaskRequests().toString().contains("fcm"))
+        {
+            google()
+        }
         jcenter()
         
     }
