[add] pushy sourceSets 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         fcm {
             java.srcDirs = ['$rootDir/app/src/main/java/flavor/fcm']
         }
+
+        pushy {
+            java.srcDirs = ['$rootDir/app/src/main/java/flavor/pushy']
+        }
     }
 
     flavorDimensions "version"
