[update] Flavor별로 gradle plugin 추가 하려고 했으나, 코드에서 참조를 못 해서 전부 참조하도록 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,8 +79,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     // fcm
-    fcmImplementation 'com.google.firebase:firebase-messaging:17.3.4'
+//    fcmImplementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
     // pushy
-    pushyImplementation 'me.pushy:sdk:1.0.45'
+//    pushyImplementation 'me.pushy:sdk:1.0.45'
+    implementation 'me.pushy:sdk:1.0.45'
 }
